--- a/GT/css/_header.scss
+++ b/GT/css/_header.scss
@@ -202,6 +202,14 @@
     right: 4.12%;
     top: 50%;
     z-index: 200;
+    transition: 0.3s ease-out;
+    @include media-breakpoint-down(md) {
+        display: none;
+    }
+    &_hide {
+        opacity: 0;
+        pointer-events: none;
+    }
 }
 
 .headroom {
