--- a/GT/css/_news.scss
+++ b/GT/css/_news.scss
@@ -45,7 +45,7 @@
         &:after {
             content: "";
             position: absolute;
-            bottom: -30px;
+            bottom: 0px;
             left: -20%;
             width: 100vw;
             height: 1px;
@@ -62,6 +62,13 @@
             @include media-breakpoint-up(lg) {
                 height: 250px;
             }
+        }
+    }
+    &:nth-last-child(2) {
+        &:after {
+            width: 0;
+            height: 0;
+            background-color: transparent;
         }
     }
 }
