--- a/GT/css/style.css
+++ b/GT/css/style.css
@@ -7850,6 +7850,10 @@ button {
   border-bottom: 1px solid #1E7FCA;
 }
 
+.map__detailsName {
+  color: #f2f2f2;
+}
+
 .ticker {
   opacity: 0.2;
 }
@@ -8382,6 +8386,12 @@ button {
 .newsItem__text {
   color: #f2f2f2;
   padding-right: 10%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  line-clamp: 3;
 }
 
 .newsItem__text:hover, .newsItem__text:active, .newsItem__text:focus {
