--- a/GT/css/_news.scss
+++ b/GT/css/_news.scss
@@ -170,3 +170,12 @@
         }
     }
 }
+
+.pageNews {
+    &__img {
+        width: 100%;
+        height: auto;
+        max-height: 500px;
+        object-fit: cover;
+    }
+}
