--- a/GT/css/style.scss
+++ b/GT/css/style.scss
@@ -1,410 +1,7 @@
 @import "bootstrap/bootstrap";
-$dark:#4F4F4F;
-$gray: #828282;
-$map:#2C2F37;
-$white: #f2f2f2;
-$bgWhite: #E3E6EC;
-$blueDeep: #00335B;
-$blueClass:#1E7FCA;
-$blueLight:#00BDFA;
-@font-face {
-    font-family: 'Kelson Sans';
-    src: url('../font/font.woff2') format('woff2'), url('../font/font.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-.m-b-1 {
-    margin-bottom: 20px;
-}
-
-.m-b-2 {
-    margin-bottom: 40px;
-}
-
-.m-b-3 {
-    margin-bottom: 60px;
-}
-
-.m-b-4 {
-    margin-bottom: 100px;
-}
-
-.m-b-5 {
-    margin-bottom: 200px;
-}
-
-.m-b-6 {
-    margin-bottom: 400px;
-}
-
-.m-t-1 {
-    margin-top: 20px;
-}
-
-.m-t-2 {
-    margin-top: 40px;
-}
-
-.m-t-3 {
-    margin-top: 60px;
-}
-
-.m-t-4 {
-    margin-top: 100px;
-}
-
-.m-t-5 {
-    margin-top: 200px;
-}
-
-.p-b-1 {
-    padding-bottom: 20px;
-}
-
-.p-b-2 {
-    padding-bottom: 40px;
-}
-
-.p-b-3 {
-    padding-bottom: 60px;
-}
-
-.p-b-4 {
-    padding-bottom: 100px;
-}
-
-.p-b-5 {
-    padding-bottom: 200px;
-}
-
-.p-t-1 {
-    padding-top: 20px;
-}
-
-.p-t-2 {
-    padding-top: 40px;
-}
-
-.p-t-3 {
-    padding-top: 60px;
-}
-
-.p-t-4 {
-    padding-top: 100px;
-}
-
-.p-t-5 {
-    padding-top: 200px;
-}
-
-@include media-breakpoint-down(sm) {
-    .m-b-4 {
-        margin-bottom: 60px;
-    }
-    .m-b-5 {
-        margin-bottom: 160px;
-    }
-    .m-b-6 {
-        margin-bottom: 200px;
-    }
-    .m-t-4 {
-        margin-top: 60px;
-    }
-    .m-t-5 {
-        margin-top: 160px;
-    }
-    .p-b-4 {
-        padding-bottom: 60px;
-    }
-    .p-b-5 {
-        padding-bottom: 160px;
-    }
-    .p-t-4 {
-        padding-top: 60px;
-    }
-    .p-t-5 {
-        padding-top: 160px;
-    }
-}
-
-.z-1 {
-    z-index: 1;
-}
-
-* {
-    font-family: Montserrat, sans-serif;
-}
-
-html {
-    font-size: 16px;
-}
-
-h1,
-h2,
-.h1,
-.h3,
-.h7 {
-    font-family: Kelson Sans, Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-}
-
-.h1 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 93px;
-    line-height: 112px;
-    letter-spacing: -0.005em;
-}
-
-.h2 {
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 46px;
-    line-height: 55px;
-    text-transform: uppercase;
-}
-
-.h3 {
-    font-size: 32px;
-    line-height: 38px;
-}
-
-.h4 {
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 40px;
-    line-height: 49px;
-}
-
-.h5 {
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    line-height: 29px;
-}
-
-.h6 {
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.h7 {
-    font-size: 60px;
-    line-height: 72px;
-}
-
-.p1 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-}
-
-.p2 {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 140%;
-}
-
-.btn1 {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.num1 {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 120px;
-    line-height: 146px;
-}
-
-@include media-breakpoint-down(lg) {
-    .h1 {
-        font-size: 62px;
-        line-height: 74px;
-    }
-    .h2 {
-        font-size: 30px;
-        line-height: 37px;
-        text-transform: uppercase;
-    }
-    .h3 {
-        font-size: 24px;
-        line-height: 31px;
-    }
-    .h4 {
-        font-size: 32px;
-        line-height: 40px;
-    }
-    .h5 {
-        font-size: 18px;
-        line-height: 22px;
-    }
-    .h6 {}
-    .h7 {
-        font-size: 50px;
-        line-height: 60px;
-    }
-    .p1 {
-        font-size: 18px;
-        line-height: 22px;
-    }
-    .p2 {}
-    .btn1 {}
-    .num1 {
-        font-size: 85px;
-        line-height: 104px;
-    }
-}
-
-@include media-breakpoint-down(md) {
-    .h1 {
-        font-size: 36px;
-        line-height: 43px;
-    }
-    .h2 {
-        font-size: 20px;
-        line-height: 24px;
-    }
-    .h3 {
-        font-size: 20px;
-        line-height: 24px;
-    }
-    .h4 {
-        font-size: 22px;
-        line-height: 27px;
-    }
-    .h5 {
-        font-size: 16px;
-        line-height: 20px;
-    }
-    .h6 {}
-    .h7 {
-        font-size: 30px;
-        line-height: 36px;
-    }
-    .p1 {
-        font-size: 16px;
-        line-height: 20px;
-    }
-    .p2 {}
-    .btn1 {}
-    .num1 {
-        font-size: 40px;
-        line-height: 49px;
-    }
-}
-
-.btn3 {
-    color: initial;
-    text-decoration: underline;
-    background-color: transparent;
-    border: none;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 140%;
-    color: $gray;
-    margin: 0;
-    padding: 0;
-    transition: 0.3s;
-    display: inline-block;
-    &::after {
-        content: url(../img/arrowBtn.svg);
-        margin-left: 15px;
-        transition: 0.3s;
-    }
-    &:hover::after {
-        margin-left: 25px;
-        display: inline-block;
-    }
-}
-
-.btn4 {
-    position: relative;
-    color: initial;
-    text-decoration: none;
-    background-color: transparent;
-    border: none;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-    color: $white;
-    margin: 0;
-    padding: 0;
-    transition: 0.3s;
-    display: inline-block;
-    &:hover {
-        color: $white;
-    }
-    &::after {
-        content: url(../img/arrowBtn1.svg);
-        margin-left: 30px;
-        transition: 0.3s;
-    }
-    &::before {
-        content: url(../img/cirklBtn.svg);
-        position: absolute;
-        top: 50%;
-        right: 40px;
-        transform: translateY(-50%);
-        transition: 0.3s;
-    }
-    &:hover::before {
-        right: 20px;
-    }
-    &:active::after,
-    &:focus:after {
-        margin-left: 60px;
-        display: inline-block;
-    }
-    &:active::before,
-    &:focus::before {
-        right: 40px;
-    }
-}
-
-.ttu {
-    text-transform: uppercase;
-}
-
-.mp {
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    list-style-type: none;
-}
-
-body {
-    background-color: $bgWhite;
-    color: $dark;
-    overflow-x: hidden;
-}
-
-a {
-    text-decoration: none;
-}
-
-a,
-button {
-    outline: none;
-}
-
+@import "swiper";
+@import "font";
+@import "variables";
 @import "header";
 @import "mainPage";
 @import "animate";
