--- a/GT/css/_variables.scss
+++ b/GT/css/_variables.scss
@@ -109,6 +109,24 @@ html {
     padding-top: 200px;
 }
 
+@include media-breakpoint-down(md) {
+    .m-b-5 {
+        margin-bottom: 160px;
+    }
+    .m-b-6 {
+        margin-bottom: 200px;
+    }
+    .m-t-5 {
+        margin-top: 160px;
+    }
+    .p-b-5 {
+        padding-bottom: 160px;
+    }
+    .p-t-5 {
+        padding-top: 160px;
+    }
+}
+
 @include media-breakpoint-down(sm) {
     .m-b-4 {
         margin-bottom: 60px;
@@ -274,6 +292,44 @@ h2,
 }
 
 @include media-breakpoint-down(md) {
+    .h1 {
+        font-size: 62px;
+        line-height: 74px;
+    }
+    .h2 {
+        font-size: 30px;
+        line-height: 37px;
+    }
+    .h3 {
+        font-size: 24px;
+        line-height: 31px;
+    }
+    .h4 {
+        font-size: 40px;
+        line-height: 49px;
+    }
+    .h5 {
+        font-size: 18px;
+        line-height: 22px;
+    }
+    .h6 {}
+    .h7 {
+        font-size: 50px;
+        line-height: 60px;
+    }
+    .p1 {
+        font-size: 16px;
+        line-height: 20px;
+    }
+    .p2 {}
+    .btn1 {}
+    .num1 {
+        font-size: 40px;
+        line-height: 49px;
+    }
+}
+
+@include media-breakpoint-down(sm) {
     .h1 {
         font-size: 36px;
         line-height: 43px;
