--- a/GT/css/_mainPage.scss
+++ b/GT/css/_mainPage.scss
@@ -578,24 +578,32 @@
     &__point {
         cursor: pointer;
         & ellipse:first-child {
-            rx: 10;
-            ry: 10;
+            rx: 10px;
+            ry: 10px;
             transition: 0.5s;
             // transform: scale(2);
         }
         & ellipse:last-child {
-            rx: 4;
-            ry: 4;
+            rx: 4px;
+            ry: 4px;
             transition: 0.5s;
             // transform: scale(2);
         }
+        & ellipse:first-child {
+            rx: 10px;
+            ry: 10px;
+        }
+        & ellipse:last-child {
+            rx: 5px;
+            ry: 5px;
+        }
         &:hover ellipse:first-child {
-            rx: 20;
-            ry: 20;
+            rx: 20px;
+            ry: 20px;
         }
         &.active ellipse:last-child {
-            rx: 10;
-            ry: 10;
+            rx: 10px;
+            ry: 10px;
         }
     }
     &__details {
@@ -838,7 +846,7 @@
 
 .counter {
     position: fixed;
-    top: calc(50vh - 99px);
+    top: calc(50vh - 65px);
     color: $dark;
     transition: 1s;
     &__inner {
