--- a/GT/css/_news.scss
+++ b/GT/css/_news.scss
@@ -72,7 +72,7 @@
             }
         }
     }
-    &:nth-last-child(2) {
+    &:nth-last-of-type(2) {
         &:after {
             width: 0;
             height: 0;
