--- a/mapa/css/_contacts.scss
+++ b/mapa/css/_contacts.scss
@@ -1,5 +1,8 @@
 .contacts{
   background-color: $gray;
+  background: url(../img/bgBp.jpg);
+  background-size: contain;
+  background-position: center;
   color: $white;
   &__table{
     border: 1px solid $white;
@@ -47,5 +50,38 @@
       color: $white;
       opacity: 0.8;
     }
+  }
+}
+
+.map{
+  position: relative;
+  &::before{
+    content: "";
+    display: block;
+    padding-bottom: 400px;
+    @include media-breakpoint-down(lg){
+      padding-bottom: 300px;
+    }
+    @include media-breakpoint-down(md){
+      padding-bottom: 250px;
+    }
+    @include media-breakpoint-down(sm){
+      padding-bottom: 200px;
+    }
+  }
+  &__inner{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+  &__map{
+    position: absolute;
+    top: 0;
+    left: -15%;
+    width: 130%;
+    height: 200%;
   }
 }
