--- a/mapa/css/_header.scss
+++ b/mapa/css/_header.scss
@@ -101,3 +101,77 @@
     transform: rotate(-0deg) translateY(-120%);
   }
 }
+
+
+
+.menu{
+  position: fixed;
+  z-index: 40;
+  height: 100vh;
+  width: 100%;
+  color: $white;
+  background-color: $gray;
+  background: url(../img/bgBp.jpg);
+  background-size: contain;
+  background-position: center;
+  transform: translateY(-120%);
+  transition: 1s ease-out;
+  transition-delay: 0.3s;
+  &__menu{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, calc(-50% + 50px));
+    opacity: 0;
+    transition: 0.4s;
+    ul{
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    
+      
+    }
+    li{
+      font-size: 5vh;
+      margin-bottom: 2vh;
+    }
+    a{
+      color: $white;
+      font-family: Buyan;
+      font-style: normal;
+      font-weight: bold;
+      // font-size: 72px;
+      // line-height: 100%;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      // -webkit-text-stroke: 1px $white;
+      transition: 0.5s;
+      &:hover, &:active, &:focus{
+        color: transparent;
+        -webkit-text-stroke: 1px $white;
+         transition: 0.3s;
+
+      }
+      &_contour {
+        color: transparent;
+        -webkit-text-stroke: 1px $gray;
+      }
+    }
+    & .current-menu-item a, & .current_page_item a{
+      color: transparent;
+      -webkit-text-stroke: 1px $white;
+    }
+  }
+  &_open{
+    transition: 0.5s ease-out;
+    transition-delay: 0s;
+    transform: translateY(0);
+    & .menu__menu{
+      opacity: 1;
+      transition-delay: 1s;
+    }
+  }
+}
