--- a/mapa/css/_mainPage.scss
+++ b/mapa/css/_mainPage.scss
@@ -2,23 +2,77 @@ body{
   background-image: url(../img/bgWp.jpg);
   // background-color: $gray;
   background-size: contain;
-  background-position: center;
+  background-position: top center;
   &.white{
   background-color: $white;
   background-image: url(../img/bgWp.jpg);
   overflow: scroll;
   }
 }
+.main3d{
+  width: 100%; 
+  height: 100vh;
+  height: calc(var(--vh) * 100);
+}
 .about{
   background-color: rgba($color: $gray, $alpha: 0.4);
+  background: url(../img/bgBp.jpg);
+  background-size: contain;
+  background-position: center;
   color: $white;
+  position: relative;
+  
+}
+.folder{
+  position: relative;
+  &::after{
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
+  &__img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+
+  }
+  &__imgBg{
+    position: absolute;
+    top: -20%;
+    left: -20%;
+    width: 150%;
+    height: auto;
+  }
+  &__btn{
+    position: absolute;
+    bottom: 0%;
+    left:-20%;
+  }
 }
 .project{
   // background-color: rgba($white, 0.8);
   color: $white;
+  &__title{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-40%);
+    z-index: 10;
+    pointer-events: none;
+  }
+}
+.text3dWrap{
+  width: 80vw;
+  height: 70vh;
+  margin-left: auto;
+  // margin-right: auto;
 }
 .services{
   background-color: $gray;
+  background: url(../img/bgBp.jpg);
+  background-size: contain;
+  background-position: center;
   color: $white;
   &__big{
     position: relative;
@@ -40,8 +94,9 @@ body{
   }
   &__bigTextInner{
     position: absolute;
-    bottom: 150px;
+    bottom: 20%;
     left: 8.33vw;
+    width: 70%;
   }
   &__sm{
     position: relative;
@@ -65,12 +120,16 @@ body{
   }
   &__smTextInner{
     position: absolute;
-    top: 150px;
+    top: 20%;
     left: 20%;
-    width: 70%;
+    width: 50%;
   }
 }
 .partners{
+  background-color: $gray;
+  background: url(../img/bgBp.jpg);
+  background-size: contain;
+  background-position: center;
   &__imgBottom{
     display: flex;
     width: 70%;
@@ -98,5 +157,29 @@ body{
   }
   & .swiper-slide-active{
     opacity: 1;
+  }
+}
+
+.grid{
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 100%;
+  background-image: url(../img/grid.png);
+  background-repeat: round;
+  background-size: 9%;
+  pointer-events: none;
+  &_white{
+  background-image: url(../img/gridW.png);
+  background-repeat: round;
+  }
+  &_menu{
+    top: calc(10% + 120px);
+    height: calc(80% - 120px);
+    @include media-breakpoint-down(sm){
+      top: calc(10% + 50px);
+      height: calc(80% - 50px);
+    }
   }
 }
