--- a/mapa/css/_variables.scss
+++ b/mapa/css/_variables.scss
@@ -444,7 +444,7 @@ input[type="number"] {
     font-size: 30px;
   }
   .h4 {
-    font-size: 24px;
+    font-size: 18px;
   }
   .h5 {
     font-size: 24px;
@@ -473,7 +473,7 @@ input[type="number"] {
     font-size: 48px;
   }
   .h4 {
-    font-size: 24px;
+    font-size: 18px;
   }
   .h5 {
     font-size: 24px;
@@ -493,9 +493,21 @@ input[type="number"] {
 }
 
 .btn2 {
-  & svg {
+  pointer-events: all;
+  &__cube g{
+    transform-origin: 50% 50%;
+    animation: rotate 36s linear infinite;
+  }
+  &__text g{
+    transform-origin: 50% 50%;
     animation: rotate 26s linear infinite;
+  }
+  & svg {
+    width: 200px;
+    height: 200px;
     will-change: transform;
+    overflow: visible;
+
   }
   & circle {
     fill: $blue;
@@ -514,6 +526,24 @@ input[type="number"] {
     }
     & path {
       fill: $blue;
+    }
+  }
+  @include media-breakpoint-down(lg) {
+    & svg {
+      width:  150px;
+      height: 150px;
+    }
+  }
+  @include media-breakpoint-down(md) {
+    & svg {
+      width:  150px;
+      height: 150px;
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    & svg {
+      width:  120px;
+      height: 120px;
     }
   }
 }
@@ -552,5 +582,26 @@ input[type="number"] {
     & path {
       fill: $white;
     }
+  }
+}
+
+.w-80 {
+    width: 80% !important;
+    height: auto;
+}
+
+.imgW{
+  position: relative;
+  &::after{
+    content: "";
+    display: block;
+    padding-bottom: 50%;
+  }
+  img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
